// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`indexing indexes posts. 1`] = `
Object {
  "thread": Object {
    "$type": "app.bsky.feed.getPostThread#threadViewPost",
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {},
      },
      "cid": "cids(0)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "entities": Array [
          Object {
            "index": Object {
              "end": 9,
              "start": 0,
            },
            "type": "mention",
            "value": "user(2)",
          },
        ],
        "text": "@bob.test how are you?",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(0)",
      "viewer": Object {},
    },
    "replies": Array [],
  },
}
`;

exports[`indexing indexes posts. 2`] = `
Object {
  "thread": Object {
    "$type": "app.bsky.feed.getPostThread#threadViewPost",
    "post": Object {
      "author": Object {
        "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(1)/cids(1)@jpeg",
        "declaration": Object {
          "actorType": "",
          "cid": "",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "viewer": Object {},
      },
      "cid": "cids(0)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "entities": Array [
          Object {
            "index": Object {
              "end": 11,
              "start": 0,
            },
            "type": "mention",
            "value": "user(2)",
          },
        ],
        "text": "@carol.test how are you?",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(0)",
      "viewer": Object {},
    },
    "replies": Array [],
  },
}
`;

exports[`indexing indexes posts. 3`] = `
Object {
  "createMessages": Array [
    Object {
      "author": "user(1)",
      "reason": "mention",
      "recordCid": "cids(0)",
      "recordUri": "record(0)",
      "type": "create_notification",
      "userDid": "user(0)",
    },
  ],
  "deletedMessages": Array [
    Object {
      "recordUri": "record(0)",
      "type": "delete_notifications",
    },
  ],
  "updateMessages": Array [
    Object {
      "recordUri": "record(0)",
      "type": "delete_notifications",
    },
    Object {
      "author": "user(1)",
      "reason": "mention",
      "recordCid": "cids(1)",
      "recordUri": "record(0)",
      "type": "create_notification",
      "userDid": "user(2)",
    },
  ],
}
`;

exports[`indexing indexes profiles. 1`] = `
Object {
  "creator": "user(0)",
  "declaration": Object {
    "actorType": "",
    "cid": "",
  },
  "did": "user(0)",
  "displayName": "dan",
  "followersCount": 0,
  "followsCount": 0,
  "handle": "dan.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "myState": Object {},
  "postsCount": 0,
  "viewer": Object {},
}
`;

exports[`indexing indexes profiles. 2`] = `
Object {
  "creator": "user(0)",
  "declaration": Object {
    "actorType": "",
    "cid": "",
  },
  "did": "user(0)",
  "displayName": "danny",
  "followersCount": 0,
  "followsCount": 0,
  "handle": "dan.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "myState": Object {},
  "postsCount": 0,
  "viewer": Object {},
}
`;

exports[`indexing indexes profiles. 3`] = `
Object {
  "creator": "user(0)",
  "declaration": Object {
    "actorType": "",
    "cid": "",
  },
  "did": "user(0)",
  "followersCount": 0,
  "followsCount": 0,
  "handle": "dan.test",
  "myState": Object {},
  "postsCount": 0,
  "viewer": Object {},
}
`;

exports[`indexing indexes profiles. 4`] = `
Object {
  "createMessages": Array [],
  "deletedMessages": Array [],
  "updateMessages": Array [],
}
`;
